Ejercicio3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pablo
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: pablo.com
    http: 
      paths:
      - path: /prodpablo
        pathType: Prefix
        backend:
          service: 
            name: prod-service
            port:
              number: 80
      - path: /ordpablo
        pathType: Prefix
        backend:
          service: 
            name: ord-service
            port:
              number: 80
